# quip

./: .gitignore  Makefile.am  README.mac  README.packages  configure.ac  def_config.csh  install_homebrew_pkgs.sh
doc/: .gitignore  Makefile.am
docs/quip_web_manual/: Advanced-Graphics.html  Advanced-variable-usage.html  Analog-I_002fO.html  Builtin-commands.html  Command-Language.html  Control-Panels.html  Creating-Data-Objects.html  Creating-a-viewer.html  Data-Objects.html  Dimensions.html  Displaying-Images.html  Displaying-the-menu.html  Exiting-the-menu.html  Expression-Language.html  First-steps.html  Frame-grabbers.html  Generating-output.html  History.html  Image-Files.html  Input-redirection.html  Installing-QuIP.html  Interacting-with-the-system.html  Interactive-Features.html  Interfacing-Hardware.html  LML-BT848.html  Loading-a-viewer.html  Loop-control.html  Macros.html  Manipulating-viewers.html  Matrox-meteor-RGB.html  Menus.html  Numeric-variables.html  Overview.html  Parallel-port.html  Plotting-Data.html  Predefined-macros.html  Prompts.html  QuIPindex.html  Response-completion.html  Sensoray-811.html  (+13 more)
include/: ascii_fmts.h  data_obj.h  display.h  dobj_prot.h  glut_supp.h  ios_item.h  item_type.h  json.h  list.h  llen.h  my_cu2.h  my_cuda.h  my_ocl.h  node.h  optimize.h  panel_obj.h  platform.h  quipAppDelegate.h  quipImages.h  quip_menu.h  quip_prot.h  rv_api.h  shape_bits.h  shape_info.h  subrt.h  veclib_api.h  vector_parser_data.h  vectree.h  viewer.h  xsupp.h
include/hips/: hip2hdr.h  hipbasic.h  hiperror.h  hips_pf.h
include/veclib/: all_vec.m4  cpx_vec.m4  gen_gpu_calls.m4  gpu_args.m4  gpu_host_call_defs.m4  host_calls_special.m4  host_fft_funcs.m4  host_typed_call_defs.m4  mtl_func_prot.m4  mtl_port.m4  mtl_veclib_prot.m4  obj_args.h  platform_funcs.m4  report_args.m4  slow_defs.m4  vecgen.h  xfer_args.m4
libsrc/: Makefile.am
libsrc/cstepit/: am_supp.c  cs_supp.c  fitsine.c  new_cs_supp.c  new_stepit.c  pkg.c  pr_supp.c  sparse.c  stepit.c  stepmenu.c  stepsupp.c
libsrc/cu2/: cu2.c  cu2_centroid_defs.m4  cu2_fft_supp.c  cu2_fill.m4  cu2_host_call_defs.m4  cu2_menu.c  cu2_typed_fft_funcs.m4  cu2_typtbl.m4  cu2_utils.c  cu2_utils.m4
libsrc/cuda/: cuda.cpp  cuda_curand.cpp  cuda_error.c  cuda_menu.cpp  cuda_npp.cpp  cuda_viewer.cpp  deviceQuery.cpp
libsrc/das1602/: dastst.c
libsrc/dither/: cdiff.c  cspread.c  ctone.c  dspread.c  getbest.c  gspread.c  rb2rgb.c  spread.c  tspread.c
libsrc/dobj/: areas.c  arrays.c  ascii.c  ascmenu.c  data_fns.c  dfuncs.c  dobj_expr.c  dobj_menu.c  dobj_util.c  dplist.c  equivalence.c  get_obj.c  index.c  makedobj.c  memops.c  shape_info.c  sub_obj.c
libsrc/fann/: fann_menu.c
libsrc/fileio/: .gitignore  avi.c  avi_info_file.c  bmp.c  copts.c  fileport.c  fio_menu.c  fio_prot.h  get_hdr.c  hips1.c  hips2.c  img_file.c  jp_opts.c  jpeg.c  matio.c  mpeg.c  png.c  png_menu.c  ppm.c  raw.c  read_raw.c  rv.c  sunras.c  tiff.c  vl.c  wav.c
libsrc/flycap/: fly.c  fly_menu.c  stream_fly.c
libsrc/gsl/: gsl.c
libsrc/gui/: ios.m  macos.m  menu_bar.m  motif.c  protomenu.c  screen_objs.c
libsrc/hips/: herrs.c  hsizepix.c  perr.c  rdoldhdr.c  readhdr.c  writehdr.c  xparam.c
libsrc/ieee1394/: dvmenu.c  frame.c
libsrc/interpreter/: .gitignore  bi_menu.c  class.c  command.c  complete.c  container.c  debug.c  encrypt_funcs.c  error.c  expect.c  features.c  fileck.c  freel.c  function.c  gcrypt.c  getbuf.c  hash.c  history.c  item_type.c  list.c  macro.c  nexpr.y  param.c  pathnm.c  pipe_support.c  query_funcs.c  query_stack.c  questions.c  quip_exec.c  rcfile.c  rn.c  strbuf.c  termio.c  tryhard.c  typed_scalars.c  variable.c  which1.c
libsrc/ios/: accel.m  avCap.m  camera.m  encrypt.m  ios_class.m  ios_item.m  ios_list.m  ios_sizable.m  main.m  nav_panel.m  oldcam.m  quipAlarm.m  quipAppDelegate.m  quipConsole.m  quipImage.m  quipImages.m  quipView.m
libsrc/json/: .gitignore  Makefile.am  json.y  json_menu.c
libsrc/knox/: knox.c
libsrc/metal/: .gitignore  Makefile.am  mtl_host_call_defs.m4  mtl_host_funcs.m4  mtl_kern_args.m4  mtl_kern_call_defs.m4  mtl_kernel_src.m4  mtl_kernels.m4  mtl_typed_fft_funcs.m4  mtl_typtbl.m4  mtl_untyped_fft_funcs.m4  mtl_untyped_host_calls.m4  mtl_veclib.m4
libsrc/meteor/: fg_routines.c  mcapt.c  mcont.c  meteor_flow.c  mgeo.c  mhw.c  mmenu.c  mmodule.c  mviewer.c  pupfind.c  stream.c
libsrc/mvimenu/: mvimenu.c  xmvi.c
libsrc/nrmenu/: nrmenu.c  numrec.c
libsrc/opencl/: bug.c  ocl.c  ocl_dev_query.c  ocl_host_call_defs.m4  ocl_kern_args.m4  ocl_kern_call_defs.m4  ocl_kernel_src.m4  ocl_typtbl.m4  ocl_utils.c  ocl_veclib.m4
libsrc/opencv/: opencv_glue.c  opencv_menu.c
libsrc/opengl/: dl.c  gl_util.c  glfb.c  glmenu.c  glut_supp.h  glx_supp.c  glx_supp.h  stereo.c  tile.c  tilemenu.c
libsrc/parport/: parport.c  pp_menu.c
libsrc/pic/: pic.c
libsrc/polhemus/: acquire.c  polh_dev.c  polh_err.c  polh_func.c  polh_menu.c  polh_tbl.c
libsrc/ports/: client.c  dataport.c  packets.c  portmenu.c  ports.c  reachability.m  server.c  sockopts.c  xmitrecv.c
libsrc/psych/: asc_data.c  exp.c  exp_menu.c  lookmenu.c  lump.c  mlfit.c  stair.c  stc.h  stc_menu.c  stc_util.c  weibull.c
libsrc/ptgrey/: pgr.c  pgr_menu.c
libsrc/rawvol/: .gitignore  create_test_disk.sh  init_test_rawvol.scr  rawvol.c  rawvol_player.c  rvmenu.c
libsrc/seq/: seqparse.y  seqprint.c
libsrc/sound/: alsa.c  alsa_input.c  ios_sound.mm  mac_sound.c  oss_sound.c  pa_input.c  pa_sound.c  soundmenu.c
libsrc/spinnaker/: README  cam_expr.c  example.c  spink.h  spink_acq.c  spink_funcs.c  spink_menu.c  spink_node_map.c  spink_util.c  spink_wrappers.c  stream_spink.c
libsrc/unix/: mouse.c  my_stty.c  pipe_menu.c  sched.c  serial.c  stamps.c  threads.c  timex.c  unix_menu.c
libsrc/usb2000/: tty_funcs.c  usb2000.c  usb2000.h  usb_funcs.c  usb_menu.c
libsrc/v4l2/: ezstream.c  fastdown.c  flow.c  vmenu.c  (+2 more)
postscript/: Makefile.am  README  jbm_head_no_bb.ps  jbm_landscape_page.ps  jbm_portrait_page.ps  jbm_trailer.ps  plotmacs.ps  plotmacs_small.ps
src/: Makefile.am  pass_thru.c  quip_main.c
(+106 files in other folders)
